# songtools

./: .gitignore  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  requirements.txt  test_summary.csv
docs/: database-schema.md  development-guidelines.md  engineering-memory-learning.md  lyric-summary-guide.md  lyric_summary_tool_guide.md
examples/: batch_summaries.csv  generate_summaries_example.py  lyric_summary_example.py  sample_deformed_lrc.txt  sample_friend.krc  sample_friend.lrc  sample_friend.txt  sample_road_with_you.txt  songs_for_share_quotes.txt  songs_list.txt
src/: __init__.py
src/audio/: __init__.py
src/dance/: __init__.py  dance_classifier.py
src/image/: __init__.py  webp_renamer.py
src/lyrics/: __init__.py  batch_share_quotes.py  batch_url_processor.py  chorus_extractor.py  extract_chorus.py  generate_summaries.py  process_chorus_folder.py  process_folder.py  summary_generator.py  url_downloader.py
src/metadata/: share_service.py  summary_manager.py
templates/: audio-processor-template.py
